--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   border-right: 1px solid #171B26;
 }
 
-/* @media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
   .wrapper {
     width: 90vmin;
     height: 115vmin;
@@ -77,4 +77,4 @@ body {
     padding: 15px 0;
     font-size: 1rem;
   }
-} */
+}
